# wgpu-test

./: Cargo.toml  build.rs
src/: main.rs  shader.frag.spv  shader.vert  shader.vert.spv
